# folkering-os

./: .cursorrules  .env.example  .gitignore  AI_OS_MANIFEST.md  AI_OS_STATUS.md  ALL_TASKS_COMPLETE.md  ARCHITECTURE.md  BOOT-OUTPUT.txt  BOOT-TEST-STATUS.md  BRAIN_BRIDGE_COMPLETE.md  BRANCH_DIFFERENCES.md  CHANGELOG.md  CODE-REVIEW.md  CONTINUATION-GUIDE.md  CONTRIBUTING.md  CURRENT-STATUS.md  Cargo.toml  DEBUG_LOG.md  Dockerfile.test  FINAL-BOOT.txt  FINAL-STATUS-AND-NEXT-STEPS.md  FIXES-APPLIED.md  GDT-TSS-SUCCESS.md  GENERATION-REPORT.md  KERNEL-ISSUE-FOUND.md  LICENSE  LINKER-FIX-STATUS.md  MCP-INTEGRATION.md  MILESTONE-USER-MODE.md  NEXT-STEPS.md  PROGRESS-UPDATE.md  PROGRESS_SUMMARY.md  README.md  REMAINING_TASKS_STATUS.md  REVIEW-FIXES-SUMMARY.md  ROADMAP-NEXT-GEN.md  SESSION-SUMMARY-2026-01-22.md  SESSION-SUMMARY.md  TESTING-GUIDE.md  TESTING-README.md  (+33 more)
apps/folk_browser/: Cargo.toml
apps/folk_browser/src/: gif.rs  jpeg.rs  lib.rs  png.rs  webp.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: benchmark.rs  boot_info.rs  lib.rs  main.rs  panic.rs  test_harness.rs  userspace_test.rs
kernel/src/arch/: mod.rs
kernel/src/bridge/: TASK_25_COMPLETE.md  TASK_26_COMPLETE.md  mod.rs  reader.rs  types.rs
kernel/src/capability/: mod.rs  types.rs
kernel/src/drivers/: ac97.rs  cmos.rs  iommu.rs  iqe.rs  keyboard.rs  mod.rs  model_disk.rs  mouse.rs  msix.rs  nvme.rs  pci.rs  rng.rs  serial.rs  storage_bench.rs  telemetry.rs  virtio.rs  virtio_blk.rs  virtio_gpu.rs  virtio_input.rs  virtio_net.rs
kernel/src/fs/: format.rs  mod.rs  mvfs.rs  ramdisk.rs
kernel/src/ipc/: SHARED_MEMORY_COMPLETE.md  message.rs  mod.rs  queue.rs  receive.rs  send.rs  shared_memory.rs
kernel/src/jit/: bench.rs  mod.rs
kernel/src/memory/: heap.rs  paging.rs  physical.rs
kernel/src/net/: a64_stream.rs  device.rs  dns.rs  firewall.rs  gemini.rs  github.rs  icmp.rs  json.rs  mod.rs  ntp.rs  proxy_config.rs  state.rs  tcp_async.rs  tcp_plain.rs  tcp_shell.rs  tls.rs  tls_verify.rs  udp.rs  wasm_ring.rs  websocket.rs
kernel/src/task/: SCHEDULER_ENHANCED_COMPLETE.md  TASK_STATISTICS_COMPLETE.md  elf.rs  mod.rs  preempt.rs  preempt_lock.rs  scheduler.rs  spawn.rs  statistics.rs  switch.rs  task.rs  task_new.rs
kernel/src/timer/: mod.rs
tools/a64-encoder/: Cargo.toml
tools/a64-encoder/examples/: bench_mlp_ablation.rs  bench_real_wasm.rs  bench_sdot_vs_f32.rs  bitops_on_pi.rs  bounds_on_pi.rs  call_on_pi.rs  cmp_on_pi.rs  conv_on_pi.rs  f32_full_on_pi.rs  f32_on_pi.rs  f64_on_pi.rs  fib_on_pi.rs  i64_full_on_pi.rs  i64_on_pi.rs  indirect_on_pi.rs  jit_cache_demo.rs  loop_on_pi.rs  memory_on_pi.rs  mlp_memory_on_pi.rs  mlp_on_pi.rs  mlp_simd_on_pi.rs  module_on_pi.rs  probe_wasm_mlp.rs  run_on_pi.rs  run_real_wasm_attention.rs  run_real_wasm_bigmlp.rs  run_real_wasm_globals.rs  run_real_wasm_mlp.rs  run_real_wasm_multifn.rs  run_sdot_test.rs  simd_on_pi.rs
tools/a64-encoder/src/: jit_cache.rs  lib.rs  peephole.rs  wasm_lower.rs  wasm_module.rs  wasm_parse.rs  wasm_validate.rs
tools/a64-streamer/: Cargo.toml  a64-stream-daemon.service  build.rs  secret.key
tools/a64-streamer/src/: auth.rs  lib.rs
tools/draug-eval-runner/: .gitignore  Cargo.toml  POLICY.md  README.md  aggregate.py  cross-model-aggregate.md  cross-model-trial-001.md  cross-model-trial-002-deterministic.md  cross-model-trial.csv  n3-trial-001.md  n3-trial.csv  position-experiment-001.md  run-trials.sh  tasks.toml
tools/draug-eval-runner/src/: apply.rs  cargo_check.rs  main.rs  prompt.rs  proxy.rs  sandbox.rs  source_extract.rs
tools/fbp-rs/: Cargo.toml
tools/fbp-rs/src/: lib.rs
tools/fbp-rs/tests/: cross_lang.rs
tools/folkering-codegraph/: Cargo.toml  SPIKE_RESULTS.md
tools/folkering-codegraph/src/: lib.rs
userspace/: Cargo.toml  README.md  link.ld  x86_64-folkering-userspace.json
userspace/.cargo/: config.toml
userspace/compositor/: Cargo.toml  build.rs
userspace/compositor/src/: agent.rs  allocator.rs  blend.rs  briefing.rs  command_dispatch.rs  damage.rs  draug.rs  driver_runtime.rs  folkshell.rs  font.rs  framebuffer.rs  gfx_consumer.rs  gfx_dispatch.rs  gfx_rings.rs  god_mode.rs  graphics.rs  input_keyboard.rs  input_mouse.rs  intent.rs  ipc_helpers.rs  iqe.rs  lib.rs  main.rs  mcp_handler.rs  refactor_types.rs  rendering.rs  slm_runtime.rs  spatial.rs  state.rs  ui_dump.rs  ui_serialize.rs  util.rs  vector_font.rs  wasm_runtime.rs  window_manager.rs
userspace/draug-daemon/: Cargo.toml
userspace/draug-daemon/src/: agent_planner.rs  draug.rs  draug_async.rs  knowledge_hunt.rs  lib.rs  main.rs  phase_c.rs  prevalidate.rs  project.rs  refactor_loop.rs  refactor_types.rs  task_store.rs
userspace/draug-streamer/: Cargo.toml  build.rs
userspace/draug-streamer/src/: main.rs  protocol.rs  tcp.rs
userspace/folkui-demo/: Cargo.toml
userspace/folkui-demo/src/: main.rs
userspace/inference/: Cargo.toml
userspace/inference-server/: Cargo.toml
userspace/inference-server/src/: allocator.rs  chat.rs  config.rs  consts.rs  debug.rs  gguf_loader.rs  handlers.rs  inference.rs  lib.rs  main.rs  sampling.rs  stream.rs  weights.rs
userspace/inference/src/: forward_pass.rs  ipc_msg.rs  local_backend.rs  main.rs  proxy_backend.rs  router.rs  sampling.rs  tensor_math.rs  (+6 more)
userspace/intent-bus/: Cargo.toml  README.md  SEMANTIC_ROUTING.md
userspace/intent-service/: Cargo.toml
userspace/libaccesskit-folk/: Cargo.toml
userspace/libfolk/: Cargo.toml  build.rs
userspace/libfolkering/: Cargo.toml  TASK_27_COMPLETE.md
userspace/libfolkui/: Cargo.toml
userspace/libsqlite/: Cargo.toml
userspace/libtensor/: Cargo.toml
userspace/neural-scheduler/: Cargo.toml  PHASE_1_COMPLETE.md  README.md
userspace/shell/: Cargo.toml
userspace/synapse/: Cargo.toml  IMPLEMENTATION_GAPS.md  PHASE_1.5_DAY_4_COMPLETE.md  PHASE_2_CHECKLIST.md  PHASE_2_DAY_1_COMPLETE.md  PHASE_2_DAY_2_COMPLETE.md  PHASE_2_DAY_5_COMPLETE.md  PHASE_2_PLAN.md  README.md  SPEC_V2_ANALYSIS.md  TESTS_PASSED.md
userspace/synapse-service/: Cargo.toml
userspace/sysmon-demo/: Cargo.toml
userspace/wasm-runtime/: Cargo.toml  README.md
(+690 files in other folders)
