[package]
name = "folkering-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Folkering OS Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
# Core utilities
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"
cfg-if = "1.0"

# x86_64 architecture support
x86_64 = { version = "0.15", features = ["abi_x86_interrupt", "instructions"] }

# Memory allocation
linked_list_allocator = { version = "0.10", default-features = false, features = ["const_mut_refs", "use_spin"] }

# Serial console
uart_16550 = "0.3"

# Data structures (no_std compatible)
hashbrown = { version = "0.14", default-features = false, features = ["inline-more", "ahash"] }

# TCP/IP network stack (no_std)
[dependencies.smoltcp]
version = "0.12"
default-features = false
features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "proto-dhcpv4",
    "proto-dns",
    "socket-dhcpv4",
    "socket-dns",
    "socket-icmp",
    "socket-tcp",
    "socket-udp",
]

# TLS 1.3 (no_std, blocking mode) — vendored with pub handshake module for cert validation
[dependencies.embedded-tls]
path = "vendor/embedded-tls"
default-features = false

# TLS verification transitive deps (needed for custom CryptoProvider)
[dependencies.p256]
version = "0.13"
default-features = false
features = ["ecdsa"]

[dependencies.signature]
version = "2.2"
default-features = false

[dependencies.embedded-io]
version = "0.7"

[dependencies.heapless]
version = "0.8"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

# Limine boot protocol
[dependencies.limine]
version = "0.5"
default-features = false

# AArch64 WASM JIT compiler (no_std, zero external deps)
[dependencies.a64-encoder]
path = "../tools/a64-encoder"
default-features = false

[features]
default = []
boot-test = []  # Enable to run kernel self-tests at boot and exit QEMU

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
strip = false

[[bin]]
name = "kernel"
path = "src/main.rs"

[lib]
name = "folkering_kernel"
path = "src/lib.rs"
