# Folkering OS Userspace Workspace
# Only includes #![no_std] programs that target the OS

[workspace]
members = [
    "libfolk",
    "libsqlite",
    "shell",
    "synapse-service",
    "libaccesskit-folk",
    "compositor",
]
resolver = "2"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
