# Folkering OS Userspace Workspace
# Only includes #![no_std] programs that target the OS

[workspace]
members = [
    "libfolk",
    "libfolkui",
    "folkui-demo",
    "sysmon-demo",
    "inference",
    "libsqlite",
    "libtensor",
    "shell",
    "synapse-service",
    "libaccesskit-folk",
    "compositor",
    "intent-service",
    "inference-server",
    "draug-streamer",
    "draug-daemon",
]
resolver = "2"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
