[package]
name = "a64-encoder"
version = "0.1.0"
edition = "2021"
description = "AArch64 (A64) instruction encoder — emits 32-bit little-endian opcodes for JIT code generation"

[features]
default = ["std"]
# When `std` is off, the crate compiles as `no_std` against `alloc`.
# Used by Folkering OS userspace / kernel integrations that don't
# link the Rust standard library.
std = []

[dependencies]

# Used by the memory-based MLP example to stream CODE + DATA frames
# through the a64-stream-daemon on a Pi. Dev-only — the encoder crate
# itself stays dependency-free for no_std consumers.
[dev-dependencies]
a64-streamer = { path = "../a64-streamer" }
