[package]
name = "draug-eval-runner"
version = "0.1.0"
edition = "2021"
description = "Pre-committed eval harness for Draug's refactor flow. Loads tasks.toml, queries CodeGraph CSR, and verifies caller counts + file sets match the frozen ground truth."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
folkering-codegraph = { path = "../folkering-codegraph" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
# JSON output for `score` / `eval` reports — drives downstream
# aggregation tooling without needing to parse text logs.
serde_json = "1"
# syn parses target Rust files to validate fn existence + locate the
# byte range of the fn item before we slice the source for the prompt.
# Already a transitive dep via folkering-codegraph; declared explicitly
# here so we don't rely on the transitive guarantee.
syn = { version = "2", features = ["full", "visit"] }

[[bin]]
name = "draug-eval"
path = "src/main.rs"
