[package]
name = "compositor"
version = "0.1.0"
edition = "2021"
description = "Blind Compositor for Folkering OS - maintains WorldTree from AccessKit updates"
authors = ["Folkering OS Team"]

[[bin]]
name = "compositor"
path = "src/main.rs"

[lib]
name = "compositor"
path = "src/lib.rs"

[dependencies]
# Core Folkering userspace library
libfolk = { path = "../libfolk", features = ["mcp"] }

# AccessKit schema for UI tree
libaccesskit-folk = { path = "../libaccesskit-folk" }

# WebAssembly interpreter for JIT tool execution (no_std, fuel metering)
# wasmi 2.0.0-beta.2 available — needs API migration (instantiate_and_start, func_wrap<Params,Args>)
# TODO: Upgrade in dedicated session for memory64 + On-Device SLM support
wasmi = { version = "0.38", default-features = false }

