[package]
name = "compositor"
version = "0.1.0"
edition = "2021"
description = "Blind Compositor for Folkering OS - maintains WorldTree from AccessKit updates"
authors = ["Folkering OS Team"]

[[bin]]
name = "compositor"
path = "src/main.rs"

[lib]
name = "compositor"
path = "src/lib.rs"

[dependencies]
# Core Folkering userspace library
libfolk = { path = "../libfolk", features = ["mcp"] }

# AccessKit schema for UI tree
libaccesskit-folk = { path = "../libaccesskit-folk" }

# WebAssembly interpreter for JIT tool execution (no_std, fuel metering)
wasmi = { version = "2.0.0-beta.2", default-features = false }

