[package]
name = "draug-daemon"
version = "0.1.0"
edition = "2021"
description = "Draug — autonomous AI agent for Folkering OS, isolated from compositor"
authors = ["Folkering OS Team"]

[lib]
name = "draug_daemon"
path = "src/lib.rs"

[[bin]]
name = "draug-daemon"
path = "src/main.rs"

[dependencies]
libfolk = { path = "../libfolk", features = ["mcp"] }

# FBP protocol parser — same dep as compositor. knowledge_hunt walks
# SemanticNode trees from the host-side proxy.
fbp-rs = { path = "../../tools/fbp-rs", default-features = false }

# SHA-256 for the PATCH_DEDUP cache lookup. The daemon hashes the
# source it's about to ship and asks the proxy "have you compiled
# this exact code before?" — saves a full cargo cycle on retries
# with byte-identical source. no_std build (no std::io / no std hash
# RNG); pure-Rust impl, no asm.
sha2 = { version = "0.10", default-features = false }

[features]
default = []
