[package]
name = "libfolk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []
mcp = ["dep:serde", "dep:postcard", "dep:heapless"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
postcard = { version = "1.1", default-features = false, optional = true }
heapless = { version = "0.9", features = ["serde"], optional = true }
