[package]
name = "synapse"
version = "0.1.0"
edition = "2021"
description = "Graph-based filesystem - Knowledge graph of files, relationships, and context"

[dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "json", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6.1"

# Vector embeddings (Phase 2)
# fastembed = { version = "0.1", optional = true }
# qdrant-client = { version = "1.7", optional = true }

# NER (Phase 2) - Using simple pattern matching for Phase 1
regex = "1.10"

# Graph algorithms
petgraph = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Content hashing (Phase 1.5)
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
embeddings = [] # Phase 2: Neural embeddings
ner = []        # Phase 2: Full NER models

[[bin]]
name = "synapse"
path = "src/main.rs"

[[bin]]
name = "synapse-cli"
path = "src/cli.rs"
