[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Folkering OS Team"]
description = "WASM/WASI runtime for Folkering OS applications"

[dependencies]
# WASM runtime
wasmtime = { version = "26.0", features = ["component-model", "async"] }
wasmtime-wasi = "26.0"

# Component model
wit-bindgen = "0.35"
wit-component = "0.219"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "wasm-runtime"
path = "src/main.rs"

[features]
default = []
debug = ["tracing/max_level_debug"]
